--- a/templates/sayhello.html
+++ b/templates/sayhello.html
@@ -29,7 +29,7 @@
 		nav {
 		  	width:100%;
 		  	height:80px;
-		  	border-bottom: 1px solid #cecece; /* Adds a thin grey line to the bottom of the header*/
+		  	border-bottom: 1px solid #42ff23; /* Adds a thin grey line to the bottom of the header*/
 		}
 
 
@@ -37,7 +37,7 @@
 	.logo {
 	float: left;
 	position: relative;
-	top: 0px;
+	top: -2px;
 	width: 200px;
 	height: 80px;
 	background-image: url("http://i.imgur.com/kejx12s.png");
@@ -79,11 +79,11 @@
 		}
 
 		nav ul li:hover{
-			background-color: #f2f2f2;	 
+			background-color: #42ff23;	 
 		}
 
 		.blogbutton {
-			background-color: #f2f2f2;
+			background-color: #42ff23;
  			color: orange;
 		}
 
