--- a/templates/index.html
+++ b/templates/index.html
@@ -31,14 +31,14 @@
 		nav {
 		  	width:100%;
 		  	height:80px;
-		  	border-bottom: 1px solid #cecece; /* Adds a thin grey line to the bottom of the header*/
+		  	border-bottom: 1px solid #42ff23; /* Adds a thin grey line to the bottom of the header*/
 		}
 
 		
 	.logo {
 	float: left;
 	position: relative;
-	top: 0px;
+	top: -2px;
 	width: 200px;
 	height: 80px;
 	background-image: url("http://i.imgur.com/kejx12s.png");
@@ -81,11 +81,11 @@
 		}
 
 		nav ul li:hover{
-			background-color: #f2f2f2;	 
+			background-color: #42ff23;	 
 		}
 
 		.menupage {
-			background-color: #f2f2f2;
+			background-color: #42ff23
  			color: orange;
 		}
 
@@ -99,7 +99,7 @@
     		margin-top:80px;
     		height: 420px;
     		width: 50%;
-    		background-color: #C6C6C6;
+    		background-color: #42ff23;
     		float: left;
     		
 		}
@@ -119,7 +119,7 @@
     		margin-top:80px;
     		height: 420px;
     		width: 55%;
-    		background-color:grey;
+    		background-color: #42ff23;
     		float: right;
 		}
 
@@ -143,7 +143,7 @@
     		height: 385px;
     		width: 50%;
     		color: black;
-            background-color: #C6C6C6;
+            background-color: #42ff23;
     		float: center;
     		resize: none;
 		}
